add Bread's photo to 404 page

--- a/404.html
+++ b/404.html
@@ -4,6 +4,13 @@ title: 404
 ---
 
 <div class="s404-container">
-  <div class="back">404</div>
-  <div class="front">Oops! There isn't a page here. You can go back to <a href="/index.html">HOME</a>.</div>
+  <div class="s404-bread">
+    <img src="/img/bread-1.png" alt="bread"/>
+    <b></b>
+    <span class="self-intro">Hi! I'm Bread!</span>
+  </div>
+  <div class="s404-content">
+    <div class="back">404</div>
+    <div class="front">Oops! There isn't a page here. But you can say hello to my dog. <i class="icon-smile"></i></div>
+  </div>
 </div>
